feat: add admin UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,16 @@
         android:theme="@style/Theme.SnapCencus"
         tools:targetApi="31">
         <activity
-            android:name=".ui.onboarding.OnBoardingActivity"
+            android:name=".ui.admin.list.UserListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.HomeActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.admin.edit.EditUserActivity"
@@ -69,10 +70,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.user.search.SearchPendudukActivity"
-            android:exported="false" />
-
-
-        <!-- Trigger Google Play services to install the backported photo picker module. -->
+            android:exported="false" /> <!-- Trigger Google Play services to install the backported photo picker module. -->
         <!-- suppress AndroidDomInspection -->
         <service
             android:name="com.google.android.gms.metadata.ModuleDependencies"
